[TASK] Fix pagetree border overlapping the page icon

--- a/Resources/Public/css/backend.scss
+++ b/Resources/Public/css/backend.scss
@@ -58,7 +58,7 @@ $googleDescriptionGrey: #545454;
           content: "";
           width: 1px;
           position: absolute;
-          top: 54%;
+          top: calc(50% + 8px);
           bottom: 0;
           left: 50%;
           border-left: 1px dotted #666666;
@@ -75,7 +75,7 @@ $googleDescriptionGrey: #545454;
         content: "";
         width: 1px;
         position: absolute;
-        top: 54%;
+        top: 50%;
         bottom: 0;
         left: 8px;
         border-left: 1px dotted #666666;
